syntax = "proto3";

package swap;

import "common/proto/common.proto";

// ========================= common =========================

// token pair
message TokenPair {
    common.CanisterId token0 = 1;
    common.CanisterId token1 = 2;
}

// token pair
message TokenPairAmm {
    TokenPair pair = 1;
    string amm = 2;
}

// ========================= basic operation =========================

// ========================= basic operation pair =========================

// create
message PairCreate {
    TokenPairAmm pa = 1;
    common.UserId creator = 2;
}

// remove
message PairRemove {
    TokenPairAmm pa = 1;
    common.UserId remover = 2;
}

// swap
message PairSwapToken {
    // which token pair, token_a -> token_b
    common.CanisterId token_a = 1;
    common.CanisterId token_b = 2;
    string amm = 3;
    // account pay
    common.Account from = 4;
    // account got
    common.Account to = 5;
    // amount pay
    common.Nat amount_a = 6;
    // amount got
    common.Nat amount_b = 7;
}


// ========================= basic operation pair swap v2 =========================

// cumulative price
message PairCumulativePrice {
    TokenPairAmm pa = 1;
    uint64 block_timestamp = 2;
    uint32 price_cumulative_exponent = 3;
    common.Nat price0_cumulative = 4;
    common.Nat price1_cumulative = 5;
}

// mint
message SwapV2MintToken {
    // which token pair
    TokenPairAmm pa = 1;
    // from account
    common.Account from = 2;
    // token transfer in
    common.CanisterId token0 = 3;
    common.CanisterId token1 = 4;
    common.Nat amount0 = 5;
    common.Nat amount1 = 6;
    // lp token mint
    common.CanisterId token = 7;
    common.Nat amount = 8;
    // to account
    common.Account to = 9;
}

// burn
message SwapV2BurnToken {
    // which token pair
    TokenPairAmm pa = 1;
    // from account
    common.Account from = 2;
    // lp token burn
    common.CanisterId token = 3;
    common.Nat amount = 4;
    // token transfer out
    common.CanisterId token0 = 5;
    common.CanisterId token1 = 6;
    common.Nat amount0 = 7;
    common.Nat amount1 = 8;
    // to account
    common.Account to = 9;
    // maybe fee
    optional common.BurnFee fee = 10;
}

// mint fee
message SwapV2MintFeeToken {
    // which token pair
    TokenPairAmm pa = 1;
    // lp token mint
    common.CanisterId token = 2;
    common.Nat amount = 3;
    // to account
    common.Account to = 4;
}

// transfer
message SwapV2TransferToken {
    // which token pair
    TokenPairAmm pa = 1;
    common.Account from = 2;
    common.CanisterId token = 3;
    common.Nat amount = 4;
    common.Account to = 5;
    optional common.TransferFee fee = 6;
}

// swap v2 operation
message SwapV2Operation {
    oneof swap_v2_operation {
        PairCumulativePrice cumulative_price = 1;
        SwapV2MintToken mint = 2;
        SwapV2BurnToken burn = 3;
        SwapV2MintFeeToken mint_fee = 4;
        SwapV2TransferToken transfer = 5;
    }
}

// ========================= basic operation pair =========================

// pair operation
message PairOperation {
    oneof pair_operation {
        PairCreate create = 1;
        PairRemove remove = 2;
        // swap // * start at 16
        PairSwapToken swap = 16;
        // swap v2 // * start at 32
        SwapV2Operation swap_v2 = 32;
    }
}

// ========================= swap operation =========================

// operation
message SwapOperation {
    oneof swap_operation {
        PairOperation pair  = 1;
    }
}

// ========================= swap transaction =========================

// transaction
message SwapTransaction {
    SwapOperation operation = 1;
    optional bytes memo = 2;
    optional uint64 created = 3;
}

// ========================= swap block =========================

// SwapBlock
message SwapBlock {
    common.Hash parent_hash = 1;
    uint64 timestamp = 2;
    SwapTransaction transaction = 3;
}
